# brine_eos

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
examples/: XHP_l0_modified.vtk.py  XHP_l1_modified.vtk.py  XHP_l2_modified.vtk.py  XHP_l3_modified.vtk.py  XHP_saltwatereos-enhanced_computations.vtk.py  XHP_saltwatereos-master.vtk.py  compile_source.py  compiler_usage.py  correlation_plotter_pure_water.py  extrac_sowat_ptx_data.py  generate_data_base.py  generate_data_base_iapws.py  generate_data_base_low_salt_content.py  generate_data_base_low_salt_content_pt.py  generate_data_base_pt.py  isotherms_reconstruction.py  vtk_extrapolation.py  vtk_sampling_with_extrapolation.py
examples/pure_water/: correlation_plotter_pure_water.py  generate_data_base_iapws.py  verification_near_pure_water_limit.py  verification_pure_water.py  water_utils.py
scripts/: build_cli_app.py
src/: globals.py
src/generator/: data_base_generator.py  source_handler.py  unphysical_extenstion.py
src/plotter/: correlation_plotter.py
src/sampler/: vtk_extrapolation.py  vtk_sampler.py
src/scripts/: build_cli_app.py  sowat_ptx_extractor.py
src/scripts/apple_script/: raw_data_sowat_ptx.txt  raw_output_sampled_sowat_ptx.txt  run_sowat_base.scpt  scan_line_idxs.awk
